# jni-rs-demo

./: Cargo.toml  clear.bat  test.bat
java/: Test.java
java/example/: ComplexObject.java
src/: lib.rs
