[package]
name = "jni-rs-demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = { version = "0.21.1", features = ["invocation"] }

[profile.release]
opt-level = 3
lto = true
